Update and rename index2.html to index3.html

--- a/index3.html
+++ b/index3.html
@@ -2,7 +2,7 @@
   <head></head>
   <body>
     <script type='text/javascript'>
-      alert(0);
+      alert(window.location.search);
     </script>
   </body>
 </html>
